--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]  # Change if your default branch is not 'main'
+    branches: [main]
 
 permissions:
   contents: read
@@ -13,17 +13,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # Optional: Add a build step here if you're using a framework like React/Vite
-      # - name: Build site
-      #   run: npm install && npm run build
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build website
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist  # Change this to your actual build output folder
+          path: ./dist  # or ./build for Create React App
 
   deploy:
     needs: build
@@ -36,4 +43,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         with:
-          enablement: true  # Automatically enables GitHub Pages if not already enabled
+          enablement: true
